EAS 활용 안드로이드 APK 빌드 성공, S21+ 정상 작동 확인

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.rylie.EASTEST"
     },
     "web": {
       "bundler": "metro",
@@ -31,6 +32,11 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "33b0d722-00c0-4cdd-8653-4c69ffce581f"
+      }
     }
   }
 }
